--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'checkstyle'
     id "net.minecrell.plugin-yml.bukkit" version "0.6.0"
+    id 'maven-publish'
+    id 'signing'
 }
 
 group = 'com.lunar-dev.lunarlib'
